WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130296
FTL ArrayifyToStructure shouldn't fail every time that it actually arrayifies
https://bugs.webkit.org/show_bug.cgi?id=130296
Summary
FTL ArrayifyToStructure shouldn't fail every time that it actually arrayifies
Filip Pizlo
Reported
2014-03-15 12:28:39 PDT
This regressed during the 32-bit structure ID work.
Attachments
the patch
(2.10 KB, patch)
2014-03-15 22:44 PDT
,
Filip Pizlo
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-15 22:44:18 PDT
Created
attachment 226834
[details]
the patch
Andreas Kling
Comment 2
2014-03-16 03:07:32 PDT
Comment on
attachment 226834
[details]
the patch Nice catch!
Filip Pizlo
Comment 3
2014-03-16 09:50:09 PDT
Landed in
http://trac.webkit.org/changeset/165700
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug